Migrate lm-api to uv

--- a/lm-api/Dockerfile-ci
+++ b/lm-api/Dockerfile-ci
@@ -4,12 +4,11 @@ WORKDIR /app
 
 RUN apt update && apt install -y curl libpq-dev gcc
 
-COPY ./pyproject.toml ./poetry.lock /app/
+COPY ./pyproject.toml ./uv.lock ./README.md /app/
 
-RUN pip install poetry==2.1.2 \
-    && poetry config virtualenvs.in-project true \
-    && poetry install --no-root --with dev \
-    && rm -rf "$POETRY_CACHE_DIR"
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
+
+RUN uv sync --extra dev
 
 ENV PATH="/app/.venv/bin:$PATH"
 
@@ -17,3 +16,4 @@ COPY ./alembic /app/alembic
 COPY ./lm_api /app/lm_api
 
 CMD ["uvicorn", "lm_api.main:app", "--host", "0.0.0.0", "--port", "80", "--loop", "asyncio"]
+
