Migrate lm-docs to uv

--- a/lm-docs/Makefile
+++ b/lm-docs/Makefile
@@ -7,15 +7,15 @@ PACKAGE_NAME:=src
 
 .PHONY: install
 install:
-	poetry install --no-root
+	uv sync
 
 .PHONY: docs
 docs: install
-	poetry run mkdocs build --config-file=docs/mkdocs.yaml
+	uv run mkdocs build --config-file=docs/mkdocs.yaml
 
 .PHONY: docs-serve
 docs-serve: install
-	poetry run mkdocs serve --config-file=docs/mkdocs.yaml --dev-addr=localhost:10000
+	uv run mkdocs serve --config-file=docs/mkdocs.yaml --dev-addr=localhost:10000
 
 .PHONY: clean
 clean:
