--- a/lm-simulator/pyproject.toml
+++ b/lm-simulator/pyproject.toml
@@ -1,26 +1,27 @@
-[tool.poetry]
+[project]
 name = "license-manager-simulator"
 version = "4.5.0"
 description = "The License Manager Simulator is an application that simulates output from 5 license servers for use in the development of applications which interface to the license servers."
-authors = ["OmniVector Solutions <info@omnivector.solutions>"]
-license = "MIT"
 readme = "README.md"
+license = { text = "MIT" }
+authors = [
+    { name = "OmniVector Solutions", email = "info@omnivector.solutions" }
+]
+requires-python = ">=3.12"
 repository = "https://github.com/omnivector-solutions/license-manager"
 documentation = "https://omnivector-solutions.github.io/license-manager"
-packages = [{ include = "lm_simulator" }]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-requests = "^2.26.0"
-Jinja2 = "^3.0.1"
+dependencies = [
+    "requests>=2.26.0",
+    "Jinja2>=3.0.1",
+]
 
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.13.0"
+[project.optional-dependencies]
+dev = [
+    "ruff>=0.13.0",
+]
 
-[tool.ruff]
-extend = "../ruff.toml"
-
-[tool.poetry.scripts]
+[project.scripts]
 lmutil = "lm_simulator.fake_binaries.flexlm.lmutil:main"
 lmxendutil = "lm_simulator.fake_binaries.lmx.lmxendutil:main"
 lstc_qrun = "lm_simulator.fake_binaries.lsdyna.lstc_qrun:main"
@@ -28,6 +29,12 @@ olixtool = "lm_simulator.fake_binaries.olicense.olixtool:main"
 rlmutil = "lm_simulator.fake_binaries.rlm.rlmutil:main"
 DSLicSrv = "lm_simulator.fake_binaries.dsls.DSLicSrv:main"
 
+[tool.ruff]
+extend = "../ruff.toml"
+
+[tool.hatch.build.targets.wheel]
+packages = ["lm_simulator"]
+
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
