--- a/lm-simulator-api/docker-compose.yaml
+++ b/lm-simulator-api/docker-compose.yaml
@@ -53,7 +53,7 @@ services:
       TEST_DATABASE_PSWD: test-pswd
       TEST_DATABASE_NAME: test-db
       TEST_DATABASE_PORT: 5432
-    command: poetry run pytest -s
+    command: uv run pytest -s
     depends_on:
       unittest-db:
         condition: service_healthy
