Migrate lm-test to uv

--- a/lm-test/Makefile
+++ b/lm-test/Makefile
@@ -5,21 +5,21 @@ PACKAGE_NAME:=lm_test
 
 .PHONY: install
 install:
-	poetry install
+	uv sync --extra dev
 
 .PHONY: mypy
 mypy: install
-	poetry run mypy ${PACKAGE_NAME} --pretty
+	uv run mypy ${PACKAGE_NAME} --pretty
 
 .PHONY: verify
 verify: install
-	poetry run ruff check ${PACKAGE_NAME}
-	poetry run ruff format --check ${PACKAGE_NAME}
+	uv run ruff check ${PACKAGE_NAME}
+	uv run ruff format --check ${PACKAGE_NAME}
 
 .PHONY: modify
 modify: install
-	poetry run ruff check --fix ${PACKAGE_NAME}
-	poetry run ruff format ${PACKAGE_NAME}
+	uv run ruff check --fix ${PACKAGE_NAME}
+	uv run ruff format ${PACKAGE_NAME}
 
 .PHONY: qa
 qa: test mypy verify
