--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -125,6 +125,23 @@ jobs:
             exit 1
           fi
 
+  update-changelog:
+    runs-on: ubuntu-latest
+    needs: bump-version
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.12
+
+      - name: Install Towncrier and build changelog
+        run: |
+          pipx install towncrier==24.8.0
+          make changelog-build
+
   create-pr:
     runs-on: ubuntu-latest
     needs: bump-version
