--- a/lm-api/pyproject.toml
+++ b/lm-api/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pydantic-extra-types>=2.10.5",
     "greenlet>=3.2.4",
+    "prometheus-client>=0.24.1",
 ]
 
 [project.optional-dependencies]
