--- a/lm-simulator-api/pyproject.toml
+++ b/lm-simulator-api/pyproject.toml
@@ -18,10 +18,10 @@ dependencies = [
     "SQLAlchemy[mypy]>=2.0.43",
     "uvicorn>=0.35.0",
     "requests>=2.32.5",
-    "psycopg2==2.9.10",
     "yarl>=1.20.1",
     "asyncpg>=0.30.0",
-    "py-buzz==7.2.0",
+    "aiosqlite>=0.20.0",
+    "py-buzz>=7.3.0",
     "toml>=0.10.2",
     "httpx>=0.28.1",
 ]
